Création des controlleur - dockerfile